--- a/fitting-dispersion.html
+++ b/fitting-dispersion.html
@@ -4,6 +4,17 @@
 <meta charset="utf-8">
 <title>Club Dispersion</title>
 <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+
+<style>
+body {
+  font-family: system-ui;
+  padding: 30px;
+}
+svg {
+  border: 1px solid #ddd;
+}
+</style>
+
 </head>
 
 <body>
@@ -13,50 +24,83 @@
 
 <script>
 
-const width = 800;
-const height = 450;
+// =======================
+// CHART FUNCTION
+// =======================
+function drawChart(data) {
 
-const svg = d3.select("#chart")
-  .append("svg")
-  .attr("width", width)
-  .attr("height", height);
+  const width = 800;
+  const height = 450;
 
-d3.csv("fitting.csv").then(data => {
-
-  data = data.map(d => ({
-    club: d.Club.trim(),
-    carry: +d["Carry (YDS)"],
-    sidespin: +d["Sidespin (RPM)"]
-  }))
-  .filter(d => !isNaN(d.carry) && !isNaN(d.sidespin));
-
-  console.log("Loaded rows:", data.length);
+  const svg = d3.select("#chart")
+    .append("svg")
+    .attr("width", width)
+    .attr("height", height);
 
   const x = d3.scaleLinear()
-    .domain(d3.extent(data,d=>d.sidespin))
-    .range([60,width-40]);
+    .domain(d3.extent(data, d => d.sidespin))
+    .range([60, width - 40]);
 
   const y = d3.scaleLinear()
-    .domain(d3.extent(data,d=>d.carry))
-    .range([height-40,40]);
+    .domain(d3.extent(data, d => d.carry))
+    .range([height - 40, 40]);
 
+  // X axis
   svg.append("g")
-    .attr("transform",`translate(0,${height-40})`)
+    .attr("transform", `translate(0,${height-40})`)
     .call(d3.axisBottom(x));
 
+  // Y axis
   svg.append("g")
-    .attr("transform","translate(60,0)")
+    .attr("transform", "translate(60,0)")
     .call(d3.axisLeft(y));
 
+  // dots
   svg.selectAll("circle")
     .data(data)
     .join("circle")
-    .attr("cx",d=>x(d.sidespin))
-    .attr("cy",d=>y(d.carry))
-    .attr("r",4)
-    .attr("fill","#2a6f97")
-    .attr("opacity",0.7);
+    .attr("cx", d => x(d.sidespin))
+    .attr("cy", d => y(d.carry))
+    .attr("r", 4)
+    .attr("fill", "#2a6f97")
+    .attr("opacity", 0.7);
+}
 
+
+// =======================
+// LOAD CSV + CLEAN HEADERS
+// =======================
+d3.csv("fitting.csv").then(raw => {
+
+  // Fix Excel header spacing automatically
+  const cleanKey = k => k.trim();
+
+  const data = raw.map(row => {
+
+    const r = {};
+    Object.keys(row).forEach(k => {
+      r[cleanKey(k)] = row[k];
+    });
+
+    return {
+      club: r["Club"]?.trim(),
+      carry: +r["Carry (YDS)"],
+      sidespin: +r["Sidespin (RPM)"]
+    };
+
+  }).filter(d =>
+      d.club &&
+      Number.isFinite(d.carry) &&
+      Number.isFinite(d.sidespin)
+  );
+
+  console.log("Loaded rows:", data.length);
+
+  drawChart(data);
+
+})
+.catch(err => {
+  console.error("CSV LOAD ERROR:", err);
 });
 
 </script>
