Invoke updateDots after dots update
Call updateDots function after updating the dots.

--- a/fitting-dispersion.html
+++ b/fitting-dispersion.html
@@ -121,7 +121,9 @@ function drawChart(data){
       .attr("cy",d=>y(d.carry)),
 
     exit => exit.remove()
+    
   );
+  updateDots();  
   }
   
   // =====================
