--- a/index.html
+++ b/index.html
@@ -1,1 +1,77 @@
 
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Season Pass Optimizer</title>
+<script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+
+<style>
+body{
+  font-family:system-ui;
+  padding:40px;
+  max-width:700px;
+  margin:auto;
+}
+button{
+  padding:10px 16px;
+  font-size:16px;
+  margin-top:10px;
+}
+.result{
+  margin-top:20px;
+  padding:15px;
+  background:#f3f3f3;
+  border-radius:8px;
+}
+</style>
+</head>
+
+<body>
+
+<h1>🏌️ Should I Buy a Season Pass?</h1>
+
+<label>Rounds you expect to play:</label>
+<br>
+<input id="rounds" type="number" value="25">
+
+<br>
+<button onclick="calculate()">Calculate Best Option</button>
+
+<div class="result" id="output"></div>
+
+<script>
+
+let plans=[];
+
+d3.csv("optimizer.csv").then(data=>{
+  plans=data.map(d=>({
+    plan:d.plan,
+    annual_cost:+d.annual_cost
+  }));
+  console.log("Plans loaded:",plans.length);
+});
+
+function calculate(){
+
+  const rounds=+document.getElementById("rounds").value;
+
+  const results=plans.map(p=>({
+    plan:p.plan,
+    cost:p.annual_cost,
+    costPerRound:p.annual_cost/rounds
+  }));
+
+  results.sort((a,b)=>a.costPerRound-b.costPerRound);
+
+  const best=results[0];
+
+  document.getElementById("output").innerHTML=
+    `<b>Best Option:</b> ${best.plan}<br>
+     Cost per round: $${best.costPerRound.toFixed(2)}`;
+}
+
+</script>
+
+</body>
+</html>
