--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Season Pass Optimizer</title>
+<title>Season Pass Decision </title>
 <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
 
 <style>
