--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ d3.tsv("./plan_outputs.csv").then(raw => {
     annual_cost: +d.annual_cost
   }));
 
-  console.log("✅ Plans:", plans);
+  console.log(" Plans:", plans);
 
 });
 
