--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ d3.csv(
     annual_cost: +d.annual_cost
   }));
 
-  console.log("✅ Plans Loaded:", plans);
+  console.log("Plans Loaded:", plans);
 
 })
 .catch(err => console.error(err));
