--- a/index.html
+++ b/index.html
@@ -24,6 +24,21 @@ button{
   background:#f3f3f3;
   border-radius:8px;
 }
+table{
+  width:100%;
+  border-collapse:collapse;
+  margin-top:15px;
+}
+
+th,td{
+  padding:8px;
+  border-bottom:1px solid #ddd;
+  text-align:left;
+}
+
+th{
+  background:#f5f5f5;
+}
 </style>
 </head>
 
