--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-
 <!doctype html>
 <html>
+
 <head>
 <meta charset="utf-8">
-<title>Season Pass Decision </title>
+<title>Season Pass Decision</title>
 
-  
+<!-- LOAD D3 FIRST -->
+<script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+
 <style>
 body{
   font-family:system-ui;
@@ -13,17 +15,20 @@ body{
   max-width:700px;
   margin:auto;
 }
+
 button{
   padding:10px 16px;
   font-size:16px;
   margin-top:10px;
 }
+
 .result{
   margin-top:20px;
   padding:15px;
   background:#f3f3f3;
   border-radius:8px;
 }
+
 table{
   width:100%;
   border-collapse:collapse;
@@ -33,31 +38,32 @@ table{
 th,td{
   padding:8px;
   border-bottom:1px solid #ddd;
-  text-align:left;
 }
 
 th{
-  background:#f5f5f5;
+  background:#eee;
 }
 </style>
+
 </head>
 
 <body>
 
 <h1>🏌️ Should I Buy a Season Pass?</h1>
 
-<label>Rounds you expect to play:</label>
-<br>
+<label>Rounds you expect to play:</label><br>
 <input id="rounds" type="number" value="25">
 
 <br>
 <button onclick="calculate()">Calculate Best Option</button>
 
 <div class="result" id="output"></div>
+
 <script>
 
 let plans = [];
 
+/* LOAD DATA */
 d3.csv(
 "https://raw.githubusercontent.com/jlocke1979/dataunlocked-labs/main/plan_outputs.csv"
 )
@@ -74,6 +80,7 @@ d3.csv(
 .catch(err => console.error(err));
 
 
+/* CALCULATOR */
 function calculate(){
 
   if(plans.length === 0){
@@ -85,9 +92,9 @@ function calculate(){
     +document.getElementById("rounds").value;
 
   const results = plans.map(p => ({
-    plan: p.plan,
-    cost: p.annual_cost,
-    costPerRound: p.annual_cost / rounds
+    plan:p.plan,
+    cost:p.annual_cost,
+    costPerRound:p.annual_cost/rounds
   }));
 
   results.sort(
@@ -109,16 +116,15 @@ function calculate(){
   <h3>Best Option: ${best.plan}</h3>
 
   <table>
-    <tr>
-      <th>Plan</th>
-      <th>Total Cost</th>
-      <th>Cost / Round</th>
-    </tr>
-    ${rows}
+  <tr>
+    <th>Plan</th>
+    <th>Total Cost</th>
+    <th>Cost / Round</th>
+  </tr>
+  ${rows}
   </table>
   `;
 }
-
 
 </script>
 
